Add getters for each stage
